[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentsched"
version = "0.0.1"
authors = ["Appointat"]
description = "A scheduler for LLM-based agents that optimizes message routing through load balancing, connection pooling, and dynamic scaling to improve concurrent processing and efficient communication with LLMs."
readme = "README.md"
keywords = [
    "message routing",
    "message queue",
    "load balancing",
    "connection pool",
    "LLM based agent",
    "large-language-models",
    "artificial-intelligence",
]
packages = [
    { include = "agentsched" },
]

license = "Apache License 2.0"
homepage = "https://github.com/Appointat/AgentSched/tree/main"
repository = "https://github.com/Appointat/AgentSched/tree/main"
documentation = "https://github.com/Appointat/AgentSched/tree/main"

[tool.poetry.dependencies]
python = "^3.9"

# openai
openai = "1.44.1"

# kafaka
confluent-kafka = "2.5.0"
kafka-python = "2.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "4.0.0"
pytest = "8.3.2"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

fix = true
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
unsafe-fixes = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["agentsched"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
